Fixing z-index issue with header info being behind the star field

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -4,6 +4,10 @@
   background-image: url('../images/universe.jpg');
   background-size: 100% 100%;
 }
+.header-info {
+  position: relative;
+  z-index: 2;
+}
 #galaxy {
   position: absolute;
   top: 0;
